force-app/main/default/objects/SLA_By_Hop__c/SLA_By_Hop__c.object-meta.xml
<CustomObject>
    <label>SLA By Hop</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA By Hop</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>