force-app/main/default/objects/SLA_By_Hop__c/fields/Aging_Day__c.field-meta.xml
<CustomField>
    <fullName>Aging_Day__c</fullName>
    <label>Aging (Day)</label>
    <summarizedField>SLA_Per_Owner__c.Time_Used_Day__c</summarizedField>
    <summaryForeignKey>SLA_Per_Owner__c.Hop_Team__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>