force-app/main/default/objects/SLA_By_Hop__c/fields/Hop__c.field-meta.xml
<CustomField>
    <fullName>Hop__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hop</label>
    <length>20</length>
    <type>Text</type>
</CustomField>