force-app/main/default/objects/SLA_By_Hop__c/fields/Is_Over_SLA__c.field-meta.xml
<CustomField>
    <fullName>Is_Over_SLA__c</fullName>
    <formula>if( Number_of_Workduration__c &lt;= 0,&apos;&apos;,
if( Over_time__c &gt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150o00000GuPvV&quot;, &quot;Red&quot;, 25,25), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150o00000GuPvQ&quot;, &quot;Green&quot;, 25,25)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Over SLA</label>
    <type>Text</type>
</CustomField>