force-app/main/default/objects/SLA_By_Hop__c/fields/Number_of_Workduration__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Workduration__c</fullName>
    <label>Number of Workduration</label>
    <summaryForeignKey>SLA_Per_Owner__c.Hop_Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>