force-app/main/default/objects/SLA_By_Hop__c/fields/SLA_Hop_Day__c.field-meta.xml
<CustomField>
    <fullName>SLA_Hop_Day__c</fullName>
    <label>SLA Hop (Day)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>